# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_test.cpp
Documentazione/: bfs.txt  duale.txt  tetraedro.txt  triangulation.txt
src/: CMakeLists.txt  PolyhedronMesh.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  TestPolyhedron.hpp
